--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.27.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
     "chai": "^4.3.6",
