--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "carris-metropolitana-api",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.14.2"
+  },
   "description": "A Node.js API to access public transport information in Lisbon using data provided by Carris Metropolitana (www.carrismetropolitana.pt)",
   "main": "app.js",
   "scripts": {
