--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "lodash": "^4.17.21",
     "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
