--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "lodash": "^4.17.21",
+    "moment-timezone": "^0.5.34",
     "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
